--- a/translations/ghost+intl-icu.en.xlf
+++ b/translations/ghost+intl-icu.en.xlf
@@ -1754,5 +1754,27 @@
         <target>Night Time Phase</target>
       </segment>
     </unit>
+    <unit id="W907qRt">
+      <notes>
+        <note category="german">Diese Stadt verfügt über eine Zugangsbeschränkung. Die Mitglieder deiner Koalition können dir nicht automatisch folgen, wenn du diese Stadt betrittst. Fortfahren?</note>
+        <note category="from">twig:///templates/ajax/ghost/intro.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Diese Stadt verfügt über eine Zugangsbeschränkung. Die Mitglieder deiner Koalition können dir nicht automatisch folgen, wenn du diese Stadt betrittst. Fortfahren?</source>
+        <target>This town has an access restriction. Your coalition members cannot automatically follow you if you enter this town. Continue?</target>
+      </segment>
+    </unit>
+    <unit id="T4fjCif">
+      <notes>
+        <note category="german">Die folgenden Koalitionsmitglieder können dir nicht in die ausgewählte Stadt folgen. Fortfahren?</note>
+        <note category="from">twig:///templates/ajax/ghost/intro.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Die folgenden Koalitionsmitglieder können dir nicht in die ausgewählte Stadt folgen. Fortfahren?</source>
+        <target>The following members of your coalition are unable to follow you into this town. Continue?</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
