--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -19206,7 +19206,7 @@
       </notes>
       <segment>
         <source>Als du es dir gerade gemütlich machen wolltest, wurdest du von {username} übel angegangen. Du hast einiges abbekommen, aber auch ordentlich ausgeteilt! Zum Glück hast du dir nichts gebrochen.</source>
-        <target>Als du es dir gerade gemütlich machen wolltest, wurdest du von {username} übel angegangen. Du hast einiges abbekommen, aber auch ordentlich ausgeteilt! Zum Glück hast du dir nichts gebrochen.</target>
+        <target>Alors que vous étiez bien tranquillement chez vous, le citoyen {username} est venu à votre rencontre, vous a bousculé avant de s'en prendre violemment à vous ! Vous vous êtes bien défendu(e), heureusement et vous n'avez pas hésité à répliquer... Rien de cassé. Les autres citoyens ont été informés.</target>
       </segment>
     </unit>
     <unit id="0XjfB3Z" name="{username} hat dich angegriffen und verletzt!">
@@ -19227,7 +19227,7 @@
       </notes>
       <segment>
         <source>Als du es dir gerade gemütlich machen wolltest, wurdest du von {username} übel angegangen. Du hast einiges abbekommen, aber auch ordentlich ausgeteilt! Leider wurdest du bei dem Angriff verletzt!</source>
-        <target>Als du es dir gerade gemütlich machen wolltest, wurdest du von {username} übel angegangen. Du hast einiges abbekommen, aber auch ordentlich ausgeteilt! Leider wurdest du bei dem Angriff verletzt!</target>
+        <target>Alors que vous étiez bien tranquillement chez vous, le citoyen {username} est venu à votre rencontre, vous a bousculé avant de s'en prendre violemment à vous ! Vous vous êtes bien défendu(e) mais l'affrontement vous a coûté une blessure ! Les autres citoyens ont été informés.</target>
       </segment>
     </unit>
     <unit id="cyaNyje" name="Verletzt">
