--- a/translations/soul+intl-icu.de.xlf
+++ b/translations/soul+intl-icu.de.xlf
@@ -2250,5 +2250,47 @@
         <target>Moderationslinks in neuem Fenster öffnen</target>
       </segment>
     </unit>
+    <unit id="DDDHPI7" name="E-Mail-Adresse ändern">
+      <segment>
+        <source>E-Mail-Adresse ändern</source>
+        <target>E-Mail-Adresse ändern</target>
+      </segment>
+    </unit>
+    <unit id="939TZNJ" name="Neue E-Mail-Adresse">
+      <segment>
+        <source>Neue E-Mail-Adresse</source>
+        <target>Neue E-Mail-Adresse</target>
+      </segment>
+    </unit>
+    <unit id="GI_Pk7k" name="E-Mail-Adresse wiederholen">
+      <segment>
+        <source>E-Mail-Adresse wiederholen</source>
+        <target>E-Mail-Adresse wiederholen</target>
+      </segment>
+    </unit>
+    <unit id="AZomVy8" name="Validierungs-Token">
+      <segment>
+        <source>Validierungs-Token</source>
+        <target>Validierungs-Token</target>
+      </segment>
+    </unit>
+    <unit id="_yPAzh1" name="Account-Infos aktualisieren">
+      <segment>
+        <source>Account-Infos aktualisieren</source>
+        <target>Account-Infos aktualisieren</target>
+      </segment>
+    </unit>
+    <unit id="bx1XUpr" name="Der Validierungs-Token ist ungültig.">
+      <segment>
+        <source>Der Validierungs-Token ist ungültig.</source>
+        <target>Der Validierungs-Token ist ungültig.</target>
+      </segment>
+    </unit>
+    <unit id="aYTkIgC" name="Du musst deine neue E-Mail Adresse validieren, bevor du sie verwenden kannst.">
+      <segment>
+        <source>Du musst deine neue E-Mail Adresse validieren, bevor du sie verwenden kannst.</source>
+        <target>Du musst deine neue E-Mail Adresse validieren, bevor du sie verwenden kannst.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
