--- a/translations/login+intl-icu.de.xlf
+++ b/translations/login+intl-icu.de.xlf
@@ -306,7 +306,7 @@
     <unit id="LiGRhEI">
       <segment>
         <source>Wenn du noch einen alten MyHordes-Account hast, kannst du dich vorerst auch damit einloggen.</source>
-        <target>Wenn du noch einen alten MyHordes-Account hast, kannst du dich vorerst auch damit einloggen.</target>
+        <target>Wenn du noch einen alten MyHordes-Account hast, kannst du dich auch damit weiter einloggen.</target>
       </segment>
     </unit>
     <unit id="ho.WxzI">
