--- a/translations/global+intl-icu.de.xlf
+++ b/translations/global+intl-icu.de.xlf
@@ -1965,5 +1965,11 @@
         <target>Keine Präferenz</target>
       </segment>
     </unit>
+    <unit id="rJ6n7d_" name="E-Mail konnte nicht gesendet werden.">
+      <segment>
+        <source>E-Mail konnte nicht gesendet werden.</source>
+        <target>E-Mail konnte nicht gesendet werden.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
