ES Translation, Global

--- a/translations/global+intl-icu.es.xlf
+++ b/translations/global+intl-icu.es.xlf
@@ -3322,7 +3322,7 @@
       </notes>
       <segment>
         <source>E-Mail konnte nicht gesendet werden.</source>
-        <target>E-Mail konnte nicht gesendet werden.</target>
+        <target>El correo electrónico no pudo ser enviado.</target>
       </segment>
     </unit>
   </file>
