Added copy function to the forum

--- a/translations/global+intl-icu.de.xlf
+++ b/translations/global+intl-icu.de.xlf
@@ -1965,5 +1965,11 @@
         <target>Keine Präferenz</target>
       </segment>
     </unit>
+    <unit id="RyBQtzC" name="Kopieren">
+      <segment>
+        <source>Kopieren</source>
+        <target>Kopieren</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
