--- a/translations/global+intl-icu.fr.xlf
+++ b/translations/global+intl-icu.fr.xlf
@@ -3334,5 +3334,16 @@
         <target>Pas de préférence</target>
       </segment>
     </unit>
+    <unit id="RyBQtzC" name="Kopieren">
+      <notes>
+        <note category="german">Kopieren</note>
+        <note category="from">twig:///templates/ajax/forum/posts.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Kopieren</source>
+        <target>Copier</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
