--- a/translations/login+intl-icu.es.xlf
+++ b/translations/login+intl-icu.es.xlf
@@ -796,7 +796,7 @@
       </notes>
       <segment>
         <source>Die eingegebene E-Mail Adresse ist nicht korrekt.</source>
-        <target>Die eingegebene E-Mail Adresse ist nicht korrekt.</target>
+        <target>La dirección de correo electrónico es incorrecta.</target>
       </segment>
     </unit>
     <unit id="y2_Gamb">
@@ -807,7 +807,7 @@
       </notes>
       <segment>
         <source>Deine E-Mail Adresse wurde geändert. Bitte validiere die neue Adresse, damit du sie verwenden kannst.</source>
-        <target>Deine E-Mail Adresse wurde geändert. Bitte validiere die neue Adresse, damit du sie verwenden kannst.</target>
+        <target>Su dirección de correo electrónico ha sido modificada. Valide la nueva dirección para poder utilizarla.</target>
       </segment>
     </unit>
   </file>
