--- a/translations/admin+intl-icu.es.xlf
+++ b/translations/admin+intl-icu.es.xlf
@@ -3982,7 +3982,7 @@
       </notes>
       <segment>
         <source>Versteckte Statuseffekte</source>
-        <target>Versteckte Statuseffekte</target>
+        <target>Efectos de estado ocultos</target>
       </segment>
     </unit>
   </file>
