--- a/translations/ghost+intl-icu.es.xlf
+++ b/translations/ghost+intl-icu.es.xlf
@@ -1762,7 +1762,7 @@
       </notes>
       <segment>
         <source>Diese Stadt verfügt über eine Zugangsbeschränkung. Die Mitglieder deiner Koalition können dir nicht automatisch folgen, wenn du diese Stadt betrittst. Fortfahren?</source>
-        <target>Diese Stadt verfügt über eine Zugangsbeschränkung. Die Mitglieder deiner Koalition können dir nicht automatisch folgen, wenn du diese Stadt betrittst. Fortfahren?</target>
+        <target>Este pueblo tiene un cupo limitado. Los miembros de su alianza no pueden seguirlo automáticamente cuando ingrese a esta ciudad. ¿Continuar?</target>
       </segment>
     </unit>
     <unit id="T4fjCif">
@@ -1773,7 +1773,7 @@
       </notes>
       <segment>
         <source>Die folgenden Koalitionsmitglieder können dir nicht in die ausgewählte Stadt folgen. Fortfahren?</source>
-        <target>Die folgenden Koalitionsmitglieder können dir nicht in die ausgewählte Stadt folgen. Fortfahren?</target>
+        <target>Los siguientes miembros de la alianza no pueden seguirte a el pueblo seleccionado. ¿Continuar?</target>
       </segment>
     </unit>
   </file>
