FR Translation correction for login with MH account

--- a/translations/login+intl-icu.fr.xlf
+++ b/translations/login+intl-icu.fr.xlf
@@ -510,7 +510,7 @@
       </notes>
       <segment>
         <source>Wenn du noch einen alten MyHordes-Account hast, kannst du dich vorerst auch damit einloggen.</source>
-        <target>Si vous avez encore un ancien compte MyHordes, vous pouvez l'utiliser pour vous connecter pour le moment.</target>
+        <target>Si vous avez encore un ancien compte MyHordes, vous pouvez l'utiliser pour vous connecter.</target>
       </segment>
     </unit>
     <unit id="ho.WxzI">
